--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>| Whiteout Cinema</title>
+        <link rel="icon" type="image/x-icon" href="Images/favicon/android-chrome-512x512.png">
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <nav>
+        <h1>Whiteout Cinema</h1>
+    </nav>
+
+    <body>
+        <header style="width:100vw; height: 100vh;">
+            <!--
+            <video>
+                <source src="file.mp4">
+            </video>
+            -->
+            <p>Shot by TimberlineFPV</p>
+        </header>
+        
+
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+    </body>
+
 </html>
+
+<style>
+    nav{
+        display: flex;
+        position: fixed;
+        top: 0%;
+    }
+
+    header {background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(5, 5, 5, 0.8)), url('https://images.unsplash.com/photo-1473968512647-3e447244af8f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80');
+        background-size: cover;}
+
+    h1 {text-align: left;
+        font-weight: 200;
+        font-size: 3vh;
+        padding: 2vh 3vh;}
+
+    header p {text-align: right;
+        font-weight: 200;
+        color: rgba(255, 255, 255, 0.75);
+        font-size: 2vh;
+        position: absolute;
+        padding: 0.5vh;
+        left: 89vw;
+        top: 94.5vh;
+        letter-spacing: normal;}
+
+    h2 {padding: 5vh 10vw;
+        font-size: 200%;
+        font-weight: 300;}
+</style>
