--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <nav>
+    <nav class="transparent">
         <h1>Whiteout Cinema</h1>
+        <div class="navbar">
+            <a>Home</a>
+            <a>Showreel</a>
+            <a>Contact</a>
+            <a>About</a>
+        </div>
     </nav>
 
     <body>
@@ -29,32 +35,24 @@
 
 </html>
 
+<script src="Scripts/index.js"></script>
+
 <style>
-    nav{
-        display: flex;
-        position: fixed;
-        top: 0%;
-    }
-
     header {background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(5, 5, 5, 0.8)), url('https://images.unsplash.com/photo-1473968512647-3e447244af8f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80');
-        background-size: cover;}
-
-    h1 {text-align: left;
-        font-weight: 200;
-        font-size: 3vh;
-        padding: 2vh 3vh;}
+        background-size: cover;
+    background-position: center;}
 
     header p {text-align: right;
         font-weight: 200;
         color: rgba(255, 255, 255, 0.75);
         font-size: 2vh;
         position: absolute;
-        padding: 0.5vh;
+        padding: 0.5vh 0.4vw;
         left: 88vw;
         top: 94.5vh;
         letter-spacing: normal;}
 
-    h2 {padding: 5vh 10vw;
+    h2 {padding: 5vh 10vw; /*temporary*/
         font-size: 200%;
         font-weight: 300;}
 </style>
