Link Responsive Update
title

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <nav class="transparent">
-        <h1>Whiteout Cinema</h1>
-        <div class="navbar">
-            <a>Home</a>
-            <a>Showreel</a>
-            <a>Contact</a>
-            <a>About</a>
-        </div>
-    </nav>
-
     <body>
+        <nav class="transparent">
+            <h1>Whiteout Cinema</h1>
+            <div class="navbar">
+                <a href="index.html">Home</a>
+                <a href="showreel.html">Showreel</a>
+                <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
+            </div>
+        </nav>
+
         <header style="width:100vw; height: 100vh;">
             <!--
             <video>
@@ -48,11 +48,12 @@
         font-size: 2vh;
         position: absolute;
         padding: 0.5vh 0.4vw;
-        left: 88vw;
-        top: 94.5vh;
+        right: 2vw;
+        bottom: 2vh;
         letter-spacing: normal;}
 
     h2 {padding: 5vh 10vw; /*temporary*/
         font-size: 200%;
-        font-weight: 300;}
+        font-weight: 300;
+        color: #ffffff;}
 </style>
