git update test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>| Whiteout Cinema</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon/android-chrome-512x512.png">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://kit.fontawesome.com/be1c725dc2.css" crossorigin="anonymous">
     </head>
 
     <body>
@@ -31,7 +32,15 @@
         
 
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
     </body>
+
+    <footer>
+    </footer>
 
 </html>
 
