Some Major Updates
Major updates

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <title>| Whiteout Cinema</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon/android-chrome-512x512.png">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://kit.fontawesome.com/be1c725dc2.css" crossorigin="anonymous">
     </head>
 
     <body>
@@ -27,24 +26,31 @@
                 <source src="file.mp4">
             </video>
             -->
-            <p>Shot by TimberlineFPV</p>
+            <p>Shots by TimberlineFPV</p>
         </header>
         
 
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta voluptatibus eveniet in, corporis fugit rem alias cumque quaerat id dolor iusto facilis. Deleniti quos unde, facilis voluptates quas saepe?</h2>
+        <h2>
+            <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum nesciunt ratione veritatis. Qui, dolores deserunt cupiditate voluptas alias, sed consequuntur nulla numquam incidunt ad doloremque animi hic accusantium, eligendi placeat.</div>
+            <div>Eaque, quidem corrupti. Inventore, nobis cum! Nemo, magni, at cum ad tempora eligendi dolorem qui architecto aliquam laborum, sed tempore rem natus atque repellat! Dolore aperiam quo laborum natus deleniti!</div>
+            <div>Beatae quidem harum aut culpa doloribus modi iusto dicta, porro eligendi et itaque repudiandae eius doloremque, provident facilis rerum soluta expedita dolores. Deleniti laudantium laborum asperiores assumenda quibusdam aut ipsum.</div>
+            <div>Distinctio maiores et voluptates. Cumque, doloribus. Saepe voluptatum natus placeat magnam veritatis assumenda cum inventore repellat velit animi officiis temporibus consequuntur ab suscipit facilis ipsum aliquam, enim vero? Illo, autem?</div>
+            <div>Magnam ipsum, aspernatur iusto eum pariatur sunt quae sed dolorem reprehenderit repellat quod eius nesciunt, non officia! Quisquam, corrupti dicta! Cupiditate soluta temporibus maiores corrupti eaque voluptas itaque cumque nam?</div>
+        </h2>
     </body>
 
     <footer>
+        <a href="https://www.discord.gg" class="fa-brands fa-discord" style="font-size: 200%; color: #ffffff; background-color: rgba(10, 10, 10, 0); border: 0px;""></a>
+        <a href="https://www.discord.gg" class="fa-solid fa-envelope" style="font-size: 200%; color: #ffffff; background-color: rgba(10, 10, 10, 0); border: 0px;""></a>
     </footer>
+
+    <h1 style="background-color: #ffffff;">This site is still under development. Do not expect to receive responses to any correspondence. </h1>
+    <h1>This site is still under development. Do not expect to receive responses to any correspondence. </h1>
 
 </html>
 
 <script src="Scripts/index.js"></script>
+<script src="https://kit.fontawesome.com/be1c725dc2.js" crossorigin="anonymous"></script>
 
 <style>
     header {background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(5, 5, 5, 0.8)), url('https://images.unsplash.com/photo-1473968512647-3e447244af8f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80');
@@ -62,7 +68,8 @@
         letter-spacing: normal;}
 
     h2 {padding: 5vh 10vw; /*temporary*/
-        font-size: 200%;
+        font-size: 250%;
+        line-height: 175%;
         font-weight: 300;
         color: #ffffff;}
 </style>
