--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
     </body>
 
     <footer>
-        <a href="https://www.discord.gg" class="fa-brands fa-discord" style="font-size: 200%; color: #ffffff; background-color: rgba(10, 10, 10, 0); border: 0px;""></a>
-        <a href="https://www.discord.gg" class="fa-solid fa-envelope" style="font-size: 200%; color: #ffffff; background-color: rgba(10, 10, 10, 0); border: 0px;""></a>
+        <a href="mailto:contact@whiteoutcinema.xyz">Email</a><p>|</p><a href="https://github.com/WhiteoutFPV">Github</a><p>|</p><a href="link">Facebook or smth</a>
     </footer>
 
-    <h1 style="background-color: #ffffff;">This site is still under development. Do not expect to receive responses to any correspondence. </h1>
+    <h1 style="background-color: #ffffff;">lorem ipsum</h1>
     <h1>This site is still under development. Do not expect to receive responses to any correspondence. </h1>
 
 </html>
