--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     header p {text-align: right;
         font-weight: 200;
         color: rgba(255, 255, 255, 0.75);
-        font-size: 2vh;
+        font-size: 1vw;
         position: absolute;
         padding: 0.5vh 0.4vw;
         right: 2vw;
