--- a/about.html
+++ b/about.html
@@ -20,7 +20,15 @@
     </nav>
 
     <body>
+        <h1 style="width: 100%; text-align: center;">
+            <br><br>Whiteout Cinema
+        </h1>
 
+        <p>Based out of Teller County, Colorado, Whiteout Cinema is a photo and videography company specializing in drone based filming of real estate, scenery, and mobile subjects.</p>
+
+        <div style="display: inline-flex;">
+            
+        </div>
     </body>
 
 </html>
