--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
             <a href="index.html">Home</a>
             <a href="showreel.html">Showreel</a>
             <a href="contact.html">Contact</a>
+            <a href="pilots.html">Pilots</a>
             <a href="about.html">About</a>
         </div>
     </nav>
@@ -31,6 +32,8 @@
         </div>
     </body>
 
-</html>
+    <footer style="padding-top: 5vw;">
+        <a href="mailto:contact@whiteoutcinema.xyz">Email</a><p>|</p><a href="https://github.com/WhiteoutFPV">Github</a><p>|</p><a href="link">Other</a>
+    </footer>
 
-<script src="Scripts/index.js"></script>
+</html>
