--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 </html>
 
+<script src="Scripts/index.js"></script>
+
 <style>
     header {background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(5, 5, 5, 0.8));
         background-size: cover;
