--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <script src="Scripts/index.js"></script>
 
 <style>
-    header {background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(5, 5, 5, 0.8));
+    header {background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.35), rgba(5, 5, 5, 0.8));
         background-size: cover;
     background-position: center;
     transition: 0.25s ease;}
@@ -72,10 +72,12 @@
         display: block;
         text-align: center;
         padding: 45vh 0px;
-        transition: color 0.2s ease;}
+        transition: 0.2s ease;}
 
     header a:hover {color:#dfdfdf;
-        transition: color 0.2s ease;}
+        transition: color 0.2s ease;
+        letter-spacing: 1.05vw;
+        transition: 0.2s ease;}
 
     h2 {padding: 5vh 10vw; /*temporary*/
         font-size: 250%;
