--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>| Whiteout Cinema</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon/android-chrome-512x512.png">
         <link rel="stylesheet" href="style.css">
+        <meta property="og:Whiteout Cinema" content="Drone Cinematography based out of Teller County"/>
     </head>
 
     <nav class="transparent">
