--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
         <title>| Whiteout Cinema</title>
         <link rel="icon" type="image/x-icon" href="Images/favicon/android-chrome-512x512.png">
         <link rel="stylesheet" href="style.css">
+        <meta property="og:title" content="Whiteout Cinema"/>
+        <meta property="og:description" content="Drone Cinematography based out of Teller County"/>
     </head>
 
     <nav class="transparent">
