--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <header style="width:100vw; height: 100vh;">
             <a href="showreel.html">Watch the Showreel</a>
-            <video autoplay loop muted style="position: absolute; top:0px;left:0px;size: 100%; z-index: -1;"><source src="Images/bg.mp4"></video>
+            <video autoplay loop muted style="position: absolute; top:0px;left:0px;size: 100%; z-index: -1;"><source src="Images/landing_page.mp4"></video>
             <p>Shots by TimberlineFPV</p>
         </header>
         
@@ -68,7 +68,7 @@
 
     header a {font-weight: 300;
         font-size: 6vh;
-        letter-spacing: 1vw;
+        letter-spacing: 0.8vw;
         width: 100vw;
         height: 100vh;
         display: block;
@@ -77,7 +77,7 @@
         transition: 0.2s ease;}
 
     header a:hover {color:#dfdfdf;
-        letter-spacing: 1.05vw;
+        letter-spacing: 0.9vw;
         transition: 0.2s ease;}
 
     h2 {padding: 5vh 10vw; /*temporary*/
